--- a/customer/customer-signup.html
+++ b/customer/customer-signup.html
@@ -63,7 +63,7 @@
             Create an account to discover nearby shops within a few kilometers.
           </p>
 
-          <form action="../../backend/customer/register_customer.php" method="POST">
+          <form action="https://hyperlocal-backend-3zcf.onrender.com/customer/register_customer.php" method="POST">
 
             <!-- Name -->
             <div class="mb-3">
