--- a/admin/admin-login.html
+++ b/admin/admin-login.html
@@ -34,7 +34,7 @@
     </p>
 
     <!-- Form (connect to backend later) -->
-    <form action="../../backend/admin/login_admin.php" method="post">
+    <form action="https://hyperlocal-backend-3zcf.onrender.com/admin/login_admin.php" method="post">
       <!-- Email -->
       <div class="mb-3">
         <label class="form-label">Admin Email</label>
