--- a/customer/customer-login.html
+++ b/customer/customer-login.html
@@ -23,7 +23,7 @@
             Login to see nearby verified shops (within 1–3 km).
           </p>
 
-          <form action="../../backend/customer/login_customer.php" method="POST">
+          <form action="https://hyperlocal-backend-3zcf.onrender.com/customer/login_customer.php" method="POST">
             <!-- Email -->
             <div class="mb-3">
               <label class="form-label">Email</label>
